--- a/homework3.html
+++ b/homework3.html
@@ -17,16 +17,14 @@
 </section>
 <section>
     <img 
-        src="images/cover.png" alt="nice image 1" height="200" width="750">
-    </img>
+        src="images/cover.png" alt="nice image 1" height="200" width="750" />
 </section>
 <section>
     <table>
         <tr>
             <td>
                 <img 
-                    src="images/niceimg.png" alt="nice image 2" height="200" width="250">
-                </img>
+                    src="images/niceimg.png" alt="nice image 2" height="200" width="250" />
             </td>
             <td height="200" width="500">
                 <p>The main goal of the conference is very clear. 
@@ -48,7 +46,7 @@
         <tr>
             <td>
                 <iframe 
-                    width="250" height="200" src="https://www.youtube.com/embed/0EfomIPH48g" frameborder="0">
+                    width="250" height="200" src="https://www.youtube.com/embed/0EfomIPH48g">
                 </iframe>
             </td>
             <td>
@@ -73,18 +71,15 @@
         <tr>
             <td>
                 <img 
-                    src="images/adam_niedzielski.jpg" alt="photo of speaker 1" height="200" width="250">
-                </img>
+                    src="images/adam_niedzielski.jpg" alt="photo of speaker 1" height="200" width="250" />
             </td>
             <td>
                 <img 
-                    src="images/ben.jpg" alt="photo of speaker 2" height="200" width="250">
-                </img>
+                    src="images/ben.jpg" alt="photo of speaker 2" height="200" width="250" />
             </td>
             <td>
                 <img 
-                    src="images/robert_pankowecki.jpg" alt="photo of speaker 3" height="200" width="250">
-                </img>
+                    src="images/robert_pankowecki.jpg" alt="photo of speaker 3" height="200" width="250"/>
             </td>
         </tr>
         <tr>
@@ -120,24 +115,21 @@
         <tr>
             <td>
                 <img 
-                    src="" alt="FB" height="20" width="20">
-                </img>
+                    src="fbicon.png" alt="FB" height="20" width="20"/>
             </td>
             <td>
                 <img 
-                    src="" alt="Twitter" height="20" width="20">
-                </img>
+                    src="instagramicon.png" alt="Twitter" height="20" width="20"/>
             </td>
             <td>
                 <img 
-                    src="" alt="Instagram" height="20" width="20">
-                </img>
+                    src="twittericon.png" alt="Instagram" height="20" width="20" />
             </td>
         </tr>
     </table>
 </section>
 <footer>
-    <p> posted by oxanaoxana on 20.03.16</p>
+    <p> posted by oxanaoxana </p>
 </footer>
     </body>
 </html>
