--- a/homework3.html
+++ b/homework3.html
@@ -39,9 +39,9 @@
     </table>
 </section>
 <section>
-    <head>
+    <header>
         <h3>Videos</h3>
-    </head>
+    </header>
     <table>
         <tr>
             <td>
@@ -62,11 +62,11 @@
     </table>
 </section>
 <section>
-    <head>
+    <header>
         <h3>
             Speakers
         </h3>
-    </head>
+    </header>
     <table>
         <tr>
             <td>
@@ -96,34 +96,34 @@
     </table>
     </section>
 <section>
-        <head>
+        <header>
            <h3>
                Register
            </h3>
-        </head>
+        </header>
         <iframe 
             src="https://www.typeform.com/" height="200" width="750" src="">
         </iframe>
 </section>
 <section>
-    <head>
+    <header>
         <h3>
             Lorem ipsum dolor sit amet, consectetur
         </h3>
-    </head>
+    </header>
     <table>
         <tr>
             <td>
                 <img 
-                    src="fbicon.png" alt="FB" height="20" width="20"/>
+                    src="images/fbicon.png" alt="FB" height="20" width="20"/>
             </td>
             <td>
                 <img 
-                    src="instagramicon.png" alt="Twitter" height="20" width="20"/>
+                    src="images/instagramicon.png" alt="Twitter" height="20" width="20"/>
             </td>
             <td>
                 <img 
-                    src="twittericon.png" alt="Instagram" height="20" width="20" />
+                    src="images/twittericon.png" alt="Instagram" height="20" width="20" />
             </td>
         </tr>
     </table>
